--- a/Repo/depictions/com.matanatam.simpall.html
+++ b/Repo/depictions/com.matanatam.simpall.html
@@ -14,7 +14,7 @@
  
 <panel>
 <img class="header" src="screenshots/simpall/header.png", width="100%"/>
-<fieldset class="description">
+<fieldset class="moreinfo">
 <div>
 <br><b>This is Simpall.</b>
 <p>proud to finally push my first theme out there, it's been a personal project of mine and I finally got around to share it.
