--- a/Repo/depictions/com.matanatam.simpall.html
+++ b/Repo/depictions/com.matanatam.simpall.html
@@ -17,14 +17,13 @@
 <fieldset class="description">
 <div>
 <br><b>This is Simpall.</b>
-<p>proud to finally push my first theme out there, it's been a personal project of mine and I finally got around to share it.
-<br><br>
-I don't want to sound cliché:
-<br>This is my own twist on the latest simplistic, elegant, and clean look. 
+<p>my first theme out here 🎈
+<br>
+<br>This is my own twist on the latest trend of simplistic, yet three-dimensional look. 
 </p><br>
 
 
-<h4 class="titles">Supports Anemone & Winterboard*<br>•iOS 8-10•</h4>
+<h4 class="titles">Made for Snowboard.(probably backward compatible with Winterboard)*<br>•iOS 8-15•</h4>
 <br>
 <p class="sec">*with Winterboard, you'll need to install ClassicBadges and <a href="cydia://package/com.bensge.customclockicon">Custom Clock Icon</a> to apply those respectively</p>
 <br>
@@ -43,11 +42,10 @@ I don't want to sound cliché:
 <br>
 ================================
 <br><br>
-<p><b>Note: </b>Simpall was created completely and exclusively on an iPhone.</p>
-<p>From crafting the designs and touching pixels using App Store apps, through packing using Cydia apps, to pushing the package up through mobile Safari.</p>
-<p>No computer was involved throughout the process, and not a single worry crossed my mind! 😀</p>
+<p><b>Fun fact: </b>Simpall was made completely and exclusively on an iPhone.</p>
+<p>From crafting the designs using App Store apps, through packing using Cydia apps, to pushing the package up through mobile Safari.</p>
 <br>
-<p>I hope you can appreciate the efforts that went into this.<p>
+<p>I hope you can appreciate the efforts that went into this 😀<p>
 </fieldset>
 </panel>
 <p class="outext">screenshots</p>
