--- a/Repo/depictions/com.matanatam.simpall.html
+++ b/Repo/depictions/com.matanatam.simpall.html
@@ -23,7 +23,8 @@
 </p><br>
 
 
-<h4 class="titles">Made for Snowboard.(probably backward compatible with Winterboard)*<br>•iOS 8-15•</h4>
+<h4 class="titles">Made for Snowboard
+(probably backward compatible with Winterboard)*<br>•iOS 8-15•</h4>
 <br>
 <p class="sec">*with Winterboard, you'll need to install ClassicBadges and <a href="cydia://package/com.bensge.customclockicon">Custom Clock Icon</a> to apply those respectively</p>
 <br>
