--- a/Repo/depictions/com.matanatam.simpall.html
+++ b/Repo/depictions/com.matanatam.simpall.html
@@ -16,7 +16,7 @@
 <img class="header" src="screenshots/simpall/header.png", width="100%"/>
 <fieldset class="description">
 <div>
-<br><b>This is Simpall.</b>
+<br>
 <p>my first theme out here 🎈
 <br>
 <br>This is my own twist on the latest trend of simplistic, yet three-dimensional look. 
@@ -24,7 +24,10 @@
 
 
 <h4 class="titles">Made for Snowboard
-(probably backward compatible with Winterboard)*<br>•iOS 8-15•</h4>
+<br>
+(probably backward compatible with Winterboard)*<br>
+<br>
+•iOS 8-15•</h4>
 <br>
 <p class="sec">*with Winterboard, you'll need to install ClassicBadges and <a href="cydia://package/com.bensge.customclockicon">Custom Clock Icon</a> to apply those respectively</p>
 <br>
