--- a/Repo/depictions/com.matanatam.symbiosis.html
+++ b/Repo/depictions/com.matanatam.symbiosis.html
@@ -17,15 +17,15 @@
 <fieldset class="description">
 <div>
 <br>
-<p><b>introducing Symbiosis:</b>
-<br> bringing the old school  Nokia UI to the iPhone 
+<p>
+<br><b> bringing the old school Nokia UI to the iPhone </b>
 <br><br>
 As a Nokia fan and a loyal user back in the good ol' days, I felt nostalgic and decided to recreate the Symbian UI and bring it to the iPhone.
 
 </p><br>
 
 
-<h4 class="titles">Anemone-only <br>•iOS 8-10•</h4>
+<h4 class="titles">Snowboard-only <br>•iOS 8-15•</h4>
 <br>
 <br>
 <p>
@@ -43,7 +43,7 @@ color: white;">bright</b>/<b>dark</b> mode<br>
 <br>
 ================================
 <br><br>
-<p><b>Note:</b> this theme was created entirely on an iPhone.</p>
+<p><b>Fun fact:</b> this theme was created entirely on an iPhone 😀</p>
 
 <p>I hope you can appreciate the efforts that went into this.<p>
 </fieldset>
